# vep-dds

./: CLAUDE.md  CMakeLists.txt  README.md  SPECIFICATION.md  install_deps.sh
cmake/: vdr-light-config.cmake.in
examples/: CMakeLists.txt
examples/idl/: telemetry.idl
examples/probes/vdr_avtp_probe/: main.cpp
examples/probes/vdr_event_probe/: main.cpp
examples/probes/vdr_metrics_probe/: main.cpp
examples/probes/vdr_otel_bridge/: main.cpp
examples/probes/vdr_vssdag_probe/: main.cpp
examples/testing/: test_probe.cpp  test_probe.hpp  test_vdr.cpp
examples/vdr/: output_sink.hpp  subscriber.cpp  subscriber.hpp
examples/vdr/sinks/: capture_sink.cpp  capture_sink.hpp  log_sink.cpp  log_sink.hpp  mqtt_sink.cpp  mqtt_sink.hpp  null_sink.hpp
src/testing/: test_probe.cpp  test_probe.hpp  test_vdr.cpp  test_vdr.hpp
src/vdr/: main.cpp  output_sink.hpp
src/vdr/sinks/: capture_sink.cpp  capture_sink.hpp  log_sink.cpp  log_sink.hpp  mqtt_sink.cpp  mqtt_sink.hpp  null_sink.hpp
tests/: test_dds_wrapper.cpp  test_integration.cpp
